2008-06-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (save-some-buffers-action-alist): Only use recursive-edit
	if the user enabled recursive-minibuffers.

	* emacs-lisp/map-ynp.el (map-y-or-n-p): Add support for other-window-scroll.

2008-06-11  Jason Rumney  <jasonr@gnu.org>

	* term/w32-win.el (w32-menu-bar-open): Rename from menu-bar-open.
	Use tmm-menubar if menu is disabled in this frame.

	* menu-bar.el (menu-bar-open): Determine how to open menu bar
	from frame type, per documentation.  Add w32 case.

2008-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion--merge-suffix): New function.
	(completion-basic-try-completion): Use it.
	(completion-pcm--find-all-completions): Add argument `filter'.
	(completion-pcm--filename-try-filter, completion-pcm--merge-try):
	New functions.
	(completion-pcm-try-completion): Use them.

	* xt-mouse.el (turn-on-xterm-mouse-tracking)
	(turn-off-xterm-mouse-tracking): Use terminal-list.

	* cus-start.el (underline-minimum-offset): Rename from
	x-underline-minimum-display-offset.

2008-06-10  David De La Harpe Golden  <david@harpegolden.net>  (tiny change)

	* cus-start.el (x-underline-minimum-display-offset): Give it a type.

2008-06-10  Chong Yidong  <cyd@stupidchicken.com>

	* mouse.el (mouse-select-font): New function.

	* faces.el (face-spec-recalc): When the face is set using
	Customize, avoid recalculating it twice.

	* menu-bar.el (menu-set-font): New function.  Bind "Set Default
	Font" menu item to it.  Apply selected font to all frames, and
	make it savable.
	(menu-bar-options-save): Save `default' font if changed.

2008-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ffap.el (ffap-string-at-point-mode-alist):
	Use alpha rather than lower.

	* dired.el (dired-insert-directory): Don't assume Unix-style dir names.

	* subr.el (momentary-string-display): Use an overlay.

	* progmodes/compile.el (compilation-mode):
	Set window-point-insertion-type.